ajout du modèle des données & MàJ des routes fonctionnelles et du chemin vers la BD

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL = mongodb+srv://maelmane:yafKdDn17mFnKqkz@testhousinghawk.v82ditw.mongodb.net/
+DATABASE_URL = mongodb+srv://maelmane:yafKdDn17mFnKqkz@testhousinghawk.v82ditw.mongodb.net/housinghawk
